# hdx-hapi-datasets

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.github/workflows/: publish.yaml  run-python-script.yaml  run-python-tests.yaml  run_script.yaml
src/hdx/scraper/hapi/: __main__.py  _version.py  base_dataset.py  country_dataset.py  datasets.py  subcategory_dataset.py  subcategory_reader.py  view_reader.py
src/hdx/scraper/hapi/config/: hdx_dataset_static.yaml  project_configuration.yaml
tests/: conftest.py  country_results.py  subcategory_results.py  test_main.py
tests/fixtures/: hapi_data_availability_afg.csv  hapi_db.pg_restore  hapi_humanitarian_needs_afg.csv  hapi_poverty_rate_afg.csv  hapi_refugees_afg.csv  hdx_hapi_conflict_event_afg.csv  hdx_hapi_conflict_event_global.csv  hdx_hapi_data_availability_afg.csv  hdx_hapi_data_availability_global.csv  hdx_hapi_food_price_afg.csv  hdx_hapi_food_price_global.csv  hdx_hapi_food_security_afg.csv  hdx_hapi_food_security_global.csv  hdx_hapi_funding_global.csv  hdx_hapi_humanitarian_needs_afg.csv  hdx_hapi_humanitarian_needs_global.csv  hdx_hapi_idps_afg.csv  hdx_hapi_idps_global.csv  hdx_hapi_national_risk_afg.csv  hdx_hapi_national_risk_global.csv  hdx_hapi_operational_presence_afg.csv  hdx_hapi_operational_presence_global.csv  hdx_hapi_population_afg.csv  hdx_hapi_population_global.csv  hdx_hapi_poverty_rate_afg.csv  hdx_hapi_poverty_rate_global.csv  hdx_hapi_rainfall_afg.csv  hdx_hapi_refugees_afg.csv  hdx_hapi_refugees_global.csv  hdx_hapi_returnees_global.csv
tests/fixtures/input/: 1.json  2.json  hapi_db.pg_restore  hapi_db.pg_restore.xz
