#########################
# Project Configuration #
#########################

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-hapi-datasets"
requires-python = ">=3.10"
dependencies = [
  "hapi-schema>= 0.9.17",
  "hdx-python-api>= 6.6.5",
  "hdx-python-country>= 4.1.1",
  "hdx-python-database[postgresql]>= 1.3.7",
  "hdx-python-scraper>= 2.6.5",
  "hdx-python-utilities>= 4.0.8",
  "sqlalchemy"
]

dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/OCHA-DAP/hdx-hapi-datasets"

[project.optional-dependencies]
test = ["pytest", "pytest-check", "pytest-cov", "pytest-mock"]
dev = ["pre-commit"]
